# lib_convention

./: CMakeLists.txt
include/: lib_convention__cmd.h  lib_convention__errno.h  lib_convention__macro.h  lib_convention__mem.h
src/: lib_convention__mem.c
